make SFML dependancy optional by implementing a linux socket interface. SFML sockets are still used by default but can be disabled by compiling via: "USE_SFML_SOCKETS=0 make -C src"

--- a/src/Makefile
+++ b/src/Makefile
@@ -25,6 +25,13 @@ else
 	CMD := @
 endif
 
+USE_SFML_SOCKETS ?= 1
+
+ifeq ($(USE_SFML_SOCKETS),1)
+	CFLAGS += -DUSE_SFML_SOCKETS
+	CXXFLAGS += -DUSE_SFML_SOCKETS
+endif
+
 .PHONY: release clean
 
 release: CFLAGS += -O2
