--- a/plugins/Insult/Makefile
+++ b/plugins/Insult/Makefile
@@ -1,8 +1,9 @@
-Insult.so: Insult.o
+insult.so: insult.o
 	g++ -shared -o $@ $^
+    cp insult.so ../../plugins/
 
 %.o: %.cpp
-	g++ -Wall -Werror -std=c++11 -I../../src -fPIC -c Insult.cpp
+	g++ -Wall -Werror -std=c++11 -I../../src -fPIC -c insult.cpp
 
 clean:
-	rm -f Insult.so *.o
+	rm -f libinsult.so *.o
