fix channel not loading from config properly

--- a/src/config
+++ b/src/config
@@ -2,6 +2,6 @@ server = "irc.freenode.net";
 serverport = 6667;
 serverpassword = "";
 ssl = false;
-username = "Heaplock-M4TE";
+username = "SirHeaplock";
 nickservpassword = "";
-channels = [ "#itsyndikat", "#heaplock" ];
+channels = [ "#heaplock" ];
