--- a/plugins/diceroll/Makefile
+++ b/plugins/diceroll/Makefile
@@ -1,9 +1,9 @@
-DiceRoll.so: DiceRoll.o
+diceroll.so: diceroll.o
 	g++ -shared -o $@ $^
-	cp $@ ../../plugins/
+	cp $@ ../../src/plugins/
 
 %.o: %.cpp
 	g++ -Wall -Werror -std=c++11 -I../../src -fPIC -c $^
 
 clean:
-	rm -f DiceRoll.so *.o
+	rm -f diceroll.so *.o
