--- a/plugins/minicalc/Makefile
+++ b/plugins/minicalc/Makefile
@@ -4,7 +4,7 @@ OUT: $(OUT)
 
 %.so: %.o
 	g++ -shared -o $@ $^
-	cp $@ ../../plugins/
+	cp $@ ../../src/plugins/
 
 %.o: %.cpp
 	g++ -Wall -Werror -std=c++11 -I../../src -fPIC -c $^
